can type in search bar and click on pick up address to launch google maps

--- a/app/src/main/res/layout/activity_appointment.xml
+++ b/app/src/main/res/layout/activity_appointment.xml
@@ -6,6 +6,12 @@
     android:orientation="vertical"
     tools:context=".AppointmentActivity">
 
+    <EditText
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="100dp"
+        android:id="@+id/address"/>
     <Button
         android:layout_width="300dp"
         android:layout_height="wrap_content"
