--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -37,9 +37,10 @@
         android:text="Sign Out"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.482"
+        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/exampleProfileLogin" />
+        app:layout_constraintTop_toBottomOf="@+id/exampleProfileLogin"
+        app:layout_constraintVertical_bias="0.627" />
 
     <Button
         android:id="@+id/changeSettingsButton"
@@ -57,5 +58,23 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/exampleProfileLogin"
-        app:layout_constraintVertical_bias="0.844" />
+        app:layout_constraintVertical_bias="0.922" />
+
+    <Button
+        android:id="@+id/service"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
+        android:text="See Services"
+        app:layout_constraintBottom_toTopOf="@+id/changeSettingsButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/exampleProfileLogin"
+        app:layout_constraintVertical_bias="0.94" />
+
 </android.support.constraint.ConstraintLayout>
