--- a/app/src/main/res/layout/service_list.xml
+++ b/app/src/main/res/layout/service_list.xml
@@ -6,9 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
+    <ListView
         android:id="@+id/serviceExample"
-        android:layout_width="224dp"
-        android:layout_height="215dp"
-        android:text="TextView" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </android.support.constraint.ConstraintLayout>
