--- a/app/src/main/res/layout/activity_appointment.xml
+++ b/app/src/main/res/layout/activity_appointment.xml
@@ -1,52 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<android.support.v4.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".AppointmentActivity">
+    android:id="@+id/drawer_layout">
 
-   <!-- <EditText
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="100dp"
-        android:id="@+id/address"/> -->
-    <Button
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="120dp"
-        android:layout_marginBottom="15dp"
-        android:layout_gravity="center"
-        android:text="Pick Up Address"
-        android:id="@+id/location"/>
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        tools:context=".AppointmentActivity">
 
-    <Button
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginBottom="25dp"
-        android:text="Pick Date and Time"
-        android:id="@+id/datepicker"/>
+       <!-- <EditText
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="100dp"
+            android:id="@+id/address"/> -->
+        <Button
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="120dp"
+            android:layout_marginBottom="15dp"
+            android:layout_gravity="center"
+            android:text="Pick Up Address"
+            android:id="@+id/location"/>
 
-    <EditText
-        android:layout_width="300dp"
-        android:layout_height="100dp"
-        android:background="@drawable/shape"
-        android:layout_gravity="center"
-        android:layout_marginBottom="25dp"
-        android:lines="8"
-        android:maxLines="10"
-        android:minLines="6"
-        android:paddingLeft="20dp"
-        android:paddingBottom="50dp"
-        android:hint="Add Description" />
+        <Button
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginBottom="25dp"
+            android:text="Pick Date and Time"
+            android:id="@+id/datepicker"/>
 
-    <Button
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="Get Price" />
+        <EditText
+            android:layout_width="300dp"
+            android:layout_height="100dp"
+            android:background="@drawable/shape"
+            android:layout_gravity="center"
+            android:layout_marginBottom="25dp"
+            android:lines="8"
+            android:maxLines="10"
+            android:minLines="6"
+            android:paddingLeft="20dp"
+            android:paddingBottom="50dp"
+            android:hint="Add Description" />
+
+        <Button
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="Get Price" />
 
 
-</LinearLayout>
+    </LinearLayout>
+
+    <android.support.design.widget.NavigationView
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:id="@+id/nav_view"
+        android:layout_gravity="left"
+        android:fitsSystemWindows="true"
+        app:headerLayout="@layout/navigation_header"
+        app:menu="@menu/navigation_menu"/>
+
+</android.support.v4.widget.DrawerLayout>
